...
            style={[
              styles.iconContainer,
              { opacity: inverseHeaderOpacity, ...boxShadow, left: 25 }
            ]}
          />
          <TouchableOpacity
            testID='goBack'
            onPress={uiEvent => {
              navigate(
                {
                  source: NavigationKeys.PRODUCT_DETAIL,
                  uiEvent
                },
...
